--- a/DotNetAppSqlDb/Views/TodosDone/Index.cshtml
+++ b/DotNetAppSqlDb/Views/TodosDone/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Todos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New1", "Create")
 </p>
 <table class="table">
     <tr>
