--- a/DotNetAppSqlDb/Views/Shared/_Layout.cshtml
+++ b/DotNetAppSqlDb/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application_test0101</p>
+            <p>&copy; @DateTime.Now.Year - My ASP.NET Application_test</p>
         </footer>
     </div>
 
